--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jithesh-j.github.io/jithesh-porto/",
+  "homepage": "https://github.com/Jithesh-j/jithesh-porto",
   "name": "jithesh-porto",
   "private": true,
   "version": "0.0.0",
